# txted

./: .gitignore  README.md  pyproject.toml
txted/: README.md  __main__.py  editor.py
txted.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
