[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "txted"
version = "0.1.0"
description = "A simple terminal-based code/text editor like Vim, built in Python."
authors = [
  { name="Kartik Vasnani", email="kartikvasnani07@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "pyperclip",
  "windows-curses; platform_system == 'Windows'"
]

[project.scripts]
txted = "txted.__main__:main"
